# secfiler-rag

./: .env.example  .gitignore  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
data/: .gitkeep
evals/: eval_set.py
src/secfiler_rag/: config.py  main.py
src/secfiler_rag/rag/: embed.py  evaluate.py  fuse.py  index.py  ingest.py  retrieve.py  search.py
