[project]
name = "secfiler-rag"
version = "0.1.0"
description = "A RAG system that works on SEC filings and can answer questions based on the content of those filings."
readme = "README.md"
authors = [
    { name = "rohhitrz", email = "rohhit.rz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.0",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.49.0",
]


[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
